React Project Setup, DynamoDb Database Setup, Backend Api Setup

--- a/BackEnd/blog/pom.xml
+++ b/BackEnd/blog/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>dynamodb</artifactId>
+			<version>2.25.6</version> <!-- Use latest stable version -->
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -85,5 +90,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+	</repositories>
 
 </project>
