--- a/BackEnd/alttabjournal/pom.xml
+++ b/BackEnd/alttabjournal/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>dynamodb</artifactId>
 			<version>2.25.6</version> <!-- Use latest stable version -->
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
