--- a/.github/workflows/react-ci-cd-checks.yaml
+++ b/.github/workflows/react-ci-cd-checks.yaml
@@ -18,13 +18,21 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd FrontEnd/alttabjournal
+          npm install
 
       - name: Lint Code
-        run: npm run lint
+        run: |
+          cd FrontEnd/alttabjournal
+          npm run lint
 
       - name: Run Unit Tests
-        run: npm run test
+        run: |
+          cd FrontEnd/alttabjournal
+          npm run test
 
       - name: Build React App
-        run: npm run build
+        run: |
+          cd FrontEnd/alttabjournal
+          npm run build
