--- a/FrontEnd/alttabjournal/package.json
+++ b/FrontEnd/alttabjournal/package.json
@@ -1,20 +1,28 @@
 {
   "name": "alttabjournal",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "clean": "rmdir /s /q node_modules && del package-lock.json"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.27.1",
+    "@eslint/js": "^9.27.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.27.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.0.0",
     "vite": "^6.3.5"
