--- a/.github/workflows/java-ci-cd-checks.yaml
+++ b/.github/workflows/java-ci-cd-checks.yaml
@@ -52,6 +52,7 @@ jobs:
         with:
           category: "/language:${{ matrix.language }}"
 
+
   spring-boot-ci:
     name: Spring Boot CI Checks
     runs-on: ubuntu-latest
@@ -65,10 +66,23 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Install Dependencies
         run: |
           cd BackEnd/alttabjournal
-          mvn install
+          mvn install -DskipTests
+
+      - name: Check Code Style
+        run: |
+          cd BackEnd/alttabjournal
+          mvn checkstyle:check
 
       - name: Run Unit Tests
         run: |
