--- a/BackEnd/alttabjournal/src/main/resources/application.properties
+++ b/BackEnd/alttabjournal/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=StartNow
-dynamodb.articlesTableName=Articles
-dynamodb.articlesContentTableName=ArticleContent
+dynamodb.tables.articles=Articles
+dynamodb.tables.articles-content=ArticleContent
+dynamodb.tables.agent=ValorantAgents
+aws.region=ap-south-1
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+logging.level.com.startnow.blog=DEBUG
+logging.level.software.amazon.awssdk=DEBUG
