--- a/FrontEnd/alttabjournal/package.json
+++ b/FrontEnd/alttabjournal/package.json
@@ -26,13 +26,16 @@
     "autoprefixer": "^10.4.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.0.0",
     "vite": "^6.3.5",
     "whatwg-fetch": "^3.6.20"
