--- a/.github/workflows/java-ci-cd-checks.yaml
+++ b/.github/workflows/java-ci-cd-checks.yaml
@@ -8,6 +8,10 @@ on:
   schedule:
     - cron: '44 10 * * 4'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   codeql-analysis:
     name: Analyze CodeQL (${{ matrix.language }})
