--- a/FrontEnd/alttabjournal/package.json
+++ b/FrontEnd/alttabjournal/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.1",
