--- a/.github/workflows/java-ci-cd-checks.yaml
+++ b/.github/workflows/java-ci-cd-checks.yaml
@@ -12,21 +12,22 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+  packages: read
+
 jobs:
   codeql-analysis:
     name: Analyze CodeQL (${{ matrix.language }})
     runs-on: ${{ matrix.language == 'swift' && 'macos-latest' || 'ubuntu-latest' }}
-    permissions:
-      security-events: write
-      packages: read
-      actions: read
-      contents: read
     strategy:
       fail-fast: false
       matrix:
         include:
           - language: java-kotlin
-            build-mode: manual  # Changed to manual for better control
+            build-mode: manual
           - language: javascript-typescript
             build-mode: none
     steps:
@@ -48,12 +49,10 @@ jobs:
           build-mode: ${{ matrix.build-mode }}
           queries: security-extended,security-and-quality
 
-      # Autobuild attempts to build any compiled languages
       - name: Autobuild
         if: matrix.build-mode == 'none'
         uses: github/codeql-action/autobuild@v3
 
-      # Manual build for Java/Kotlin
       - name: Manual Build
         if: matrix.language == 'java-kotlin'
         run: |
@@ -69,6 +68,10 @@ jobs:
     name: Spring Boot CI Checks
     runs-on: ubuntu-latest
     needs: codeql-analysis
+    permissions:
+      contents: read
+      actions: read
+      packages: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -96,8 +99,9 @@ jobs:
         working-directory: BackEnd/alttabjournal
         run: mvn package
 
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v3
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: spring-boot-app
           path: BackEnd/alttabjournal/target/*.jar
+          retention-days: 5
