--- a/BackEnd/alttabjournal/src/main/resources/application.properties
+++ b/BackEnd/alttabjournal/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.application.name=StartNow
 dynamodb.tables.articles=Articles
 dynamodb.tables.articles-content=ArticleContent
 dynamodb.tables.agent=ValorantAgents
+dynamodb.tables.section-article-mapping=SectionArticleMapping
+dynamodb.tables.user=User
 aws.region=ap-south-1
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-
 logging.level.com.startnow.blog=DEBUG
-logging.level.software.amazon.awssdk=DEBUG
+logging.level.software.amazon.awssdk=WARN
+
