--- a/BackEnd/alttabjournal/src/test/resources/application.properties
+++ b/BackEnd/alttabjournal/src/test/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=StartNow
 dynamodb.tables.articles=Articles
 dynamodb.tables.articles-content=ArticleContent
-dynamodb.tables.agent=Agent
+dynamodb.tables.agent=ValorantAgents
+dynamodb.tables.section-article-mapping=SectionArticleMapping
+dynamodb.tables.user=User
 aws.region=ap-south-1
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+logging.level.com.startnow.blog=DEBUG
+logging.level.software.amazon.awssdk=WARN
+
