--- a/FrontEnd/alttabjournal/package.json
+++ b/FrontEnd/alttabjournal/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "^9.27.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
